--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android-extensions'
 
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 'android-P'
     buildToolsVersion versions.buildTools
     defaultConfig {
         applicationId "io.github.feelfree.osteemt"
@@ -33,11 +33,12 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$versions.kotlin"
-    implementation "com.android.support:appcompat-v7:$versions.supportLibrary"
-    implementation "com.android.support:recyclerview-v7:$versions.supportLibrary"
-    implementation "com.android.support:cardview-v7:$versions.supportLibrary"
-    implementation "com.android.support.constraint:constraint-layout:$versions.constraintLayout"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
+    implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
+    implementation 'androidx.cardview:cardview:1.0.0-alpha1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0-alpha1'
     // Dagger 2
     implementation "com.google.dagger:dagger:$versions.dagger2"
     kapt "com.google.dagger:dagger-compiler:$versions.dagger2"
