--- a/versions.gradle
+++ b/versions.gradle
@@ -1,9 +1,9 @@
 ext {
     versions = [
             buildTools        : '27.0.3',
-	        androidPlugin     : '3.2.0-alpha06',
+	        androidPlugin     : '3.2.0-alpha14',
             kotlin            : '1.2.41',
-            supportLibrary    : '27.1.1',
+            supportLibrary    : '28.0.0-alpha1',
             constraintLayout  : '1.1.0',
             dagger2           : '2.15',
             javax_annotations : '10.0-b28',
