--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,14 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+kapt {
+    generateStubs = true
+    correctErrorTypes = true
+}
+
+androidExtensions {
+    experimental = true
+}
 
 android {
     compileSdkVersion 'android-P'
@@ -33,7 +41,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin"
     implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
     implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
     implementation 'androidx.cardview:cardview:1.0.0-alpha1'
