--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
     defaultConfig {
         applicationId "io.github.feelfree.osteemt"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 'P'
         versionCode 1
         versionName "1.0"
     }
