--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
-kapt {
-    generateStubs = true
-    correctErrorTypes = true
-}
 
-androidExtensions {
-    experimental = true
-}
 
 android {
     compileSdkVersion 'android-P'
@@ -53,13 +46,12 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$versions.dagger2"
     implementation "com.google.dagger:dagger-android:$versions.dagger2"
     implementation "com.google.dagger:dagger-android-support:$versions.dagger2"
-    compileOnly "org.glassfish:javax.annotation:$versions.javax_annotations"
     // RxJava
     implementation "io.reactivex.rxjava2:rxandroid:$versions.rxandroid"
     implementation "io.reactivex.rxjava2:rxjava:$versions.rxjava"
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$versions.retrofit"
-    implementation "com.squareup.retrofit2:converter-moshi:$versions.retrofit"
+    implementation "com.squareup.retrofit2:converter-jackson:$versions.retrofit"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
     testImplementation 'junit:junit:4.12'
 }
