--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,17 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+androidExtensions {
+    experimental = true
+}
 
 android {
-    compileSdkVersion 'android-P'
+    compileSdkVersion 27
     buildToolsVersion versions.buildTools
     defaultConfig {
         applicationId "io.github.feelfree.osteemt"
         minSdkVersion 21
-        targetSdkVersion 'P'
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
     }
@@ -34,11 +37,11 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$versions.kotlin"
-    implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
-    implementation 'androidx.cardview:cardview:1.0.0-alpha1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.0'
-    implementation 'com.google.android.material:material:1.0.0-alpha1'
+    implementation "com.android.support:appcompat-v7:$versions.supportLibrary"
+    implementation "com.android.support:recyclerview-v7:$versions.supportLibrary"
+    implementation "com.android.support:cardview-v7:$versions.supportLibrary"
+    implementation "com.android.support:design:$versions.supportLibrary"
+    implementation "com.android.support.constraint:constraint-layout:$versions.constraintLayout"
     // Dagger 2
     implementation "com.google.dagger:dagger:$versions.dagger2"
     kapt "com.google.dagger:dagger-compiler:$versions.dagger2"
