--- a/versions.gradle
+++ b/versions.gradle
@@ -1,7 +1,8 @@
 ext {
     versions = [
             buildTools        : '27.0.3',
-	        androidPlugin     : '3.2.0-alpha14',
+	        androidPlugin     : '3.1.2',
+            supportLibrary    : '27.0.2',
             kotlin            : '1.2.41',
             constraintLayout  : '1.1.0',
             dagger2           : '2.16',
