--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,14 +53,22 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$versions.dagger2"
     implementation "com.google.dagger:dagger-android:$versions.dagger2"
     implementation "com.google.dagger:dagger-android-support:$versions.dagger2"
+
     // RxJava
     implementation "io.reactivex.rxjava2:rxandroid:$versions.rxandroid"
     implementation "io.reactivex.rxjava2:rxjava:$versions.rxjava"
+
     // Retrofit
     implementation "com.squareup.okhttp3:logging-interceptor:3.10.0"
     implementation "com.squareup.retrofit2:retrofit:$versions.retrofit"
     implementation "com.squareup.retrofit2:converter-jackson:$versions.retrofit"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:$versions.glide"
+    annotationProcessor "com.github.bumptech.glide:compiler:$versions.glide"
+    implementation "com.github.bumptech.glide:okhttp3-integration:$versions.glide"
+
     // Utils
     implementation "org.ocpsoft.prettytime:prettytime:$versions.prettytime"
     testImplementation 'junit:junit:4.12'
