--- a/versions.gradle
+++ b/versions.gradle
@@ -10,5 +10,6 @@ ext {
             rxjava            : '2.1.13',
             rxandroid         : '2.0.2',
             prettytime        : '4.0.1.Final',
+            glide             : '4.7.1'
     ]
 }
