--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE-LGPL-2.1.txt'
+        exclude 'META-INF/LICENSE-LGPL-3.txt'
+        exclude 'META-INF/LICENSE-W3C-TEST'
+        exclude 'META-INF/DEPENDENCIES'
+    }
 }
 
 dependencies {
@@ -53,6 +60,7 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$versions.dagger2"
     implementation "com.google.dagger:dagger-android:$versions.dagger2"
     implementation "com.google.dagger:dagger-android-support:$versions.dagger2"
+    implementation "com.vladsch.flexmark:flexmark-all:$versions.flexmark"
 
     // RxJava
     implementation "io.reactivex.rxjava2:rxandroid:$versions.rxandroid"
