--- a/versions.gradle
+++ b/versions.gradle
@@ -10,6 +10,7 @@ ext {
             rxjava            : '2.1.13',
             rxandroid         : '2.0.2',
             prettytime        : '4.0.1.Final',
-            glide             : '4.7.1'
+            glide             : '4.7.1',
+            flexmark          : '0.32.24'
     ]
 }
