--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:$versions.glide"
     implementation "com.github.bumptech.glide:okhttp3-integration:$versions.glide"
 
+    implementation 'org.jetbrains:markdown:0.1.28'
     implementation 'ru.noties:markwon:1.0.5'
     implementation 'ru.noties:markwon-image-loader:1.0.5' // optional
     implementation 'ru.noties:markwon-view:1.0.5' // optional
