--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation "com.google.dagger:dagger-android:$versions.dagger2"
     implementation "com.google.dagger:dagger-android-support:$versions.dagger2"
     implementation "com.vladsch.flexmark:flexmark-all:$versions.flexmark"
+    implementation 'com.commonsware.cwac:anddown:0.4.0'
 
     // RxJava
     implementation "io.reactivex.rxjava2:rxandroid:$versions.rxandroid"
