--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ allprojects {
         jcenter()
         maven { url 'https://jitpack.io' }
         maven { url 'http://dl.bintray.com/jetbrains/markdown' }
+        maven {
+            url "https://s3.amazonaws.com/repo.commonsware.com"
+        }
     }
 }
 
